Revert "Wrap nav around a nav-container, fix scrolling"
This reverts commit 28a9609683523e99123d73ccb6984467fabf85a7.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,11 +28,6 @@
   }
 }
 
-#nav-container {
-  width: 100%;
-  overflow: hidden;
-}
-
 nav {
   display: flex;
   justify-content: flex-start;
@@ -42,6 +37,7 @@ nav {
   font-weight: 600;
   font-size: 14px;
   padding: 13px 16px 13px 0;
+  width: 100%;
   overflow: auto;
   white-space: nowrap;
 }
